overflow:hidden; to prevent scrollbar reflow issue

--- a/app/views/ProjectLinks.module.css
+++ b/app/views/ProjectLinks.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   gap: 2px;
   padding: 48px;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .ProjectLink{
